* Fix cookies banner overflow on mobile. * Fix date picker collapsing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ label {
     font-size: 1rem;
     padding: 0.5rem;
     min-width: 20rem;
+    height: 36px;
 }
 
 .RegularTextInput:focus {
