--- a/src/components/header/AcceptCookiesBanner.css
+++ b/src/components/header/AcceptCookiesBanner.css
@@ -3,3 +3,6 @@
     background-color:#fff;
     display: block;
 }
+.react-cookie-banner {
+    overflow: hidden;
+}
